fixing layout issue

--- a/react-app/src/display.css
+++ b/react-app/src/display.css
@@ -413,6 +413,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    gap: 5px;
     padding: 6px 10px;
     margin-bottom: 2px;
     border-radius: 4px;
@@ -433,7 +434,7 @@ ul {
 
 #root {
     height: 100vh;
-    width: 200vh;
+    width: 203vh;
 }
 
 * {
@@ -568,6 +569,10 @@ position: relative;
     outline: 0;
     border: 0;
     margin-bottom: 20px;
+}
+
+.fa-trash {
+    margin-right: 5px;
 }
 
 
